--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@
         <section class="page-section bg-light" id="team">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading text-uppercase">Notre incroyable équipe</h2>
+                    <h3 class="section-subheading text-muted">Notre équipe se present comme suit</h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-4">
