--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                     <ul class="navbar-nav text-uppercase ml-auto">
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Services</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#team">Team</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">A propos</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#team">Equipe</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
                     </ul>
                 </div>
@@ -45,7 +45,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Nos Services</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Nous offrons une éducation de meilleur qualité aux apprenant</h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
@@ -221,7 +221,7 @@
         <section class="page-section bg-light" id="team">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Notre incroyable équipe</h2>
+                    <h2 class="section-heading text-uppercase">Notre incroyable équipe dirigeante</h2>
                     <h3 class="section-subheading text-muted">Notre équipe se present comme suit</h3>
                 </div>
                 <div class="row">
