quelques imqge personnel ajoute

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                                 ><div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/01-thumbnail.jpg" alt=""
+                                <img class="img-fluid" src="img/creation.jpg" alt="Le jour de la création de ProEducation"
                             /></a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Threads</div>
@@ -94,7 +94,7 @@
                                 ><div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/02-thumbnail.jpg" alt=""
+                                <img class="img-fluid" src="img/logo.jpg" alt="Logo de ProEducation"
                             /></a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Explore</div>
@@ -108,7 +108,7 @@
                                 ><div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/03-thumbnail.jpg" alt=""
+                                <img class="img-fluid" src="img/membre.jpg" alt="Membre créateur"
                             /></a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Finish</div>
