--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Portfolio</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Quelques un de nos prestattions</h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-4 col-sm-6 mb-4">
@@ -83,8 +83,8 @@
                                 <img class="img-fluid" src="img/creation.jpg" alt="Le jour de la création de ProEducation"
                             /></a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Threads</div>
-                                <div class="portfolio-caption-subheading text-muted">Illustration</div>
+                                <div class="portfolio-caption-heading">Création</div>
+                                <div class="portfolio-caption-subheading text-muted">À notre création</div>
                             </div>
                         </div>
                     </div>
